Correccion de dockerfiles por cada lenguaje y segunda version terminada

--- a/cpp/Dockerfile
+++ b/cpp/Dockerfile
@@ -4,8 +4,4 @@ WORKDIR /app
 
 RUN mkdir -p /app/salida_cpp
 
-COPY fibonacci.cpp .
-
-RUN g++ -o fibonacci fibonacci.cpp -O3
-
-CMD ["/app/fibonacci"]
+CMD g++ -o fibonacci -std=c++17 fibonacci.cpp && ./fibonacci
