--- a/goland/Dockerfile
+++ b/goland/Dockerfile
@@ -4,8 +4,4 @@ WORKDIR /app
 
 RUN mkdir -p /app/salida_go
 
-COPY fibonacci.go .
-
-RUN go build -o fibonacci fibonacci.go
-
-CMD ["/app/fibonacci"]
+CMD go build -o fibonacci fibonacci.go && ./fibonacci
